# markup

backend/: .env.example  .env.sample  Cargo.toml  build.sh
backend/migrations/2023-06-12-034119_create_todo_table/: up.sql
backend/src/: config.rs  db.rs  main.rs  models.rs
backend/src/api/: api.rs
backend/src/models/: mod.rs
backend/src/repository/: config.rs  db.rs  mod.rs
frontend/: .env.example  .env.template  package.json
frontend/app/: error.tsx  layout.tsx  next-auth-provider.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/gallery/: page.tsx
frontend/app/generate/: page.tsx
frontend/app/grade/: page.tsx
frontend/components/: auth-button.tsx  generate-chatbox.tsx  main-nav.tsx  site-header.tsx
frontend/config/: site.ts
frontend/lib/: auth.ts
