[package]
name = "markup-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
diesel = { version = "2.1.0", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.3.3", features = ["v4"] }
